<resources>
    <string name="app_name">Adutucart Admin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_product">Add Product</string>
    <string name="category">Category</string>
    <string name="product">Product</string>
    <string name="slider">Slider</string>
    <string name="add_category">Add Category</string>
    <string name="add_slider">Add Slider</string>
    <string name="all_orders_detail">All Orders Detail</string>
    <string name="image_preview">Image Preview</string>
    <string name="upload_slider">Upload Slider</string>
    <string name="loading">Loading</string>
    <string name="upload_category">Upload Category</string>
    <string name="category_name">Category Name</string>
    <string name="product_sp">Product SP</string>
    <string name="product_mrp">Product MRP</string>
    <string name="product_description">Product Description</string>
    <string name="product_name">Product Name</string>
    <string name="product_location">Product Location</string>
    <string name="select_cover_image">Select Cover Image</string>
    <string name="gummy_bears">Gummy Bears</string>
    <string name="product_store">Product Store</string>
</resources>